fdo#83529: Only preserve metadata of moved, not copied files

Change-Id: If3e436d137b6989af22df43c3a9a247bb2c9ffe9